test/expected/explain_udc_a4i.out
explain operator A4()
                 ^
18: error: user-defined conversion operator can not convert to an array; did you mean pointer to array?
